--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Unblocked</title>
+    <title>HanshewUnblocked</title>
     <link rel="icon" href="https://lh6.googleusercontent.com/3LuQ6JmqjSl-cfOoa7d7wvI6UMBHemY2ZC2pjSiMNdWbGBE5K_iVAHXO2TSEjU21nnxSJ8odiahwddDeWFynK_c=w1280">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header -->
-    <header class="header">Retro Unblocked</header>
+    <header class="header">HanshewUnblocked</header>
 
     <!-- Navigation -->
     <nav class="nav">
@@ -21,7 +21,7 @@
     </nav>
 
     <!-- Content Section -->
-    <div class="content" id="content">Welcome to Retro Unblocked!</div>
+    <div class="content" id="content">Welcome to Hanshew Unblocked!</div>
 
     <!-- Search Bar -->
     <div id="searchContainer" style="display: none;">
@@ -51,7 +51,7 @@
 
     <!-- Footer -->
     <footer>
-        &copy; 2025 Retro Unblocked. All rights reserved.
+        &copy; 2025 Hanshew Unblocked. All rights reserved.
     </footer>
 
     <!-- Profile Section -->
