--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
         <div id="profile-info"></div>
     </div>
 
+    <!-- Image Adder Section -->
+    <div id="image-adder" style="display: none;">
+        <h2>Add Game Image</h2>
+        <form id="image-form">
+            <label for="game-name">Game Name:</label>
+            <input type="text" id="game-name" name="game-name"><br><br>
+            <label for="game-image">Game Image:</label>
+            <input type="file" id="game-image" name="game-image"><br><br>
+            <button type="submit">Add Image</button>
+        </form>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
