--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="nav">
         <button onclick="showContent('games')">Games</button>
         <button onclick="showContent('changelog')">Changelog</button>
-        <button onclick="showContent('request')">Request Game</button>
+        <button onclick="showContent('request')">GaamAI</button>
         <button onclick="showContent('settings')">Settings</button>
         <button onclick="showProfile()">Profile</button>
     </nav>
