--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                     <div class="update-card">
                         <div class="update-date">2025-3-13</div>
                         <ul class="update-features">
-                            <li>Added Our New AI ChatBox.</li>
+                            <li>Release Of 1.1 Update.</li>
                         </ul>
                     </div>
                 </div>
